css edits. hover css issue on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -138,7 +138,6 @@ $cl-light-blue: #43befa;
 
   .home-bg-1 {
   	height: 300px !important;
-		background-position-y: 0 !important;
   	h1 {
   		font-size: 28px;
   	}
