--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -18,104 +18,6 @@ nav {
 }
 
 
-
-
-@media screen and (max-width: 767px) {
-	.navbar-header {
-
-		.desk {
-			display: none;
-		}
-
-		a.navbar-brand {
-			float: none;
-      display: block;
-      text-align: center;
-      margin-left: 60px;
-      margin-right: 60px;
-		}
-
-		span.concannon-number {
-			display: block;
-			text-align: center;
-			margin-left: 0;
-
-			.teal-phone {
-				width: 25px;
-			}
-
-      a.phone-number {
-        font-size: 10px;
-        line-height: 50px
-      }
-		}
-	}
-}
-
-@media screen and (min-width: 769px) {
-
-	.navbar-header {
-
-		.desk {
-			display: inline-block;
-		}
-
-	}
-  .nav > li > a {
-    padding: 10px 30px !important;
-  }
-}
-
-@media screen and (min-width: 481px) {
-  .navbar-header {
-
-    span.mobile {
-      display: none;
-    }
-
-    .navbar-brand .logo {
-      width: 350px;
-    }
-  }
-}
-
-@media screen and (min-width: 481px) and (max-width: 958px) {
-  .navbar-brand .logo {
-    width: 300px !important;
-  }
-  .nav > li > a {
-    padding: 10px 12px !important;
-  }
-}
-
-// @media screen and (min-width: 768px) and (max-width: 958px) {
-//   .nav > li > a {
-//     padding: 10px !important;
-//   } 
-// }
-
-@media screen and (max-width: 480px) {
-  .navbar-header {
-    
-    a.navbar-brand {
-      margin-left: 0;
-    }
-
-    .logo {
-      width: 270px;
-    }
-
-    span.concannon-number {
-      display: block;
-    }
-
-    .navbar-toggle {
-      margin-top: 0;
-    }
-  }
-}
-
-
 .navbar .navbar-brand {
 	font-family: "montserrat-regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #ffffff !important;
@@ -125,7 +27,8 @@ nav {
   font-size: 10px;
   padding: 15px 0;
 }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+
+.navbar-default .navbar-toggle:focus {
   background: transparent !important;
   transition: opacity .5s ease-in-out;
   -moz-transition: opacity .5s ease-in-out;
@@ -171,6 +74,102 @@ nav {
 
 .dropdown-menu {
   background: transparent !important;
+}
+
+
+@media screen and (max-width: 767px) {
+  .navbar-header {
+
+    .desk {
+      display: none;
+    }
+
+    a.navbar-brand {
+      float: none;
+      display: block;
+      text-align: center;
+      margin-left: 60px;
+      margin-right: 60px;
+    }
+
+    span.concannon-number {
+      display: block;
+      text-align: center;
+      margin-left: 0;
+
+      .teal-phone {
+        width: 25px;
+      }
+
+      a.phone-number {
+        font-size: 10px;
+        line-height: 50px
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 769px) {
+
+  .navbar-header {
+
+    .desk {
+      display: inline-block;
+    }
+
+  }
+  .nav > li > a {
+    padding: 10px 30px !important;
+  }
+  .navbar-default .navbar-toggle:hover {
+    background: transparent !important;
+    transition: opacity .5s ease-in-out;
+    -moz-transition: opacity .5s ease-in-out;
+    -webkit-transition: opacity .5s ease-in-out;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .navbar-header {
+
+    span.mobile {
+      display: none;
+    }
+
+    .navbar-brand .logo {
+      width: 350px;
+    }
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 958px) {
+  .navbar-brand .logo {
+    width: 300px !important;
+  }
+  .nav > li > a {
+    padding: 10px 12px !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navbar-header {
+    
+    a.navbar-brand {
+      margin-left: 0;
+    }
+
+    .logo {
+      width: 270px;
+    }
+
+    span.concannon-number {
+      display: block;
+    }
+
+    .navbar-toggle {
+      margin-top: 0;
+    }
+  }
 }
 
 @media screen and (min-width: 992px) {
